Moved Ub21337 images into their own directory to match other styles, fixed invisible header text. Tried to fix menu items overlapping other bits of the header, but couldn't manage it.

--- a/styles/Ub321337/general.css
+++ b/styles/Ub321337/general.css
@@ -1,12 +1,14 @@
 @extend
 body {
 	font-family: courier, helvetica, verdana, sans-serif;
+	color: #008800;
 	background-color: #000000;
 	/*cursor: url(www/pics/l33tcursor.cur);*/
 }
 @extend
 form, div, p, span, td, th, i {
 	font-family:  courier, helvetica, verdana, sans-serif;
+	color: #008800;
 }
 
 input {
